# vosk-tts-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
docs/: fst_dictionary.md  fst_integration.md  g2p_stress_improvement.md
proto/: tts_service.proto
src/: error.rs  fst_dict.rs  g2p.rs  lib.rs  main.rs  model.rs  synth.rs
