[package]
name = "vosk-tts-rs"
version = "0.1.0"
edition = "2021"
description = "Rust version of Vosk TTS - Offline Text-to-Speech System"
repository = "https://github.com/andreytkachenko/vosk-tts-rs.git"
license-file = "LICENSE"
authors = ["andrey@iadev.ru", "Alpha Cephei Inc"]

[dependencies]
# ONNX Runtime for inference
ort = "2.0.0-rc.12"
ndarray = "0.17"

# Audio handling
hound = "3.5"
rubato = "0.15"

# HTTP and downloads
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "2.2"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Tokenizers (BERT)
tokenizers = { version = "0.20", features = ["onig"] }

# Async runtime (for server)
tokio = { version = "1.41", features = ["full"] }

# Error handling
thiserror = "2.0"

# Path handling
dirs = "5.0"

# Regex
regex = "1.11"

# gRPC (tonic)
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# For server streaming
tokio-stream = "0.1"

# Numpy-like operations
rayon = "1.10"

# CPU count
num_cpus = "1.16"

[build-dependencies]
tonic-build = "0.12"

[lib]
name = "vosk_tts_rs"
path = "src/lib.rs"

[[bin]]
name = "vosk-tts-rs"
path = "src/main.rs"

[[bin]]
name = "vosk-tts-server-rs"
path = "src/bin/server.rs"

[[bin]]
name = "vosk-tts-client-rs"
path = "src/bin/client.rs"
